--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -149,14 +149,39 @@ jobs:
   bats:
     runs-on: ubuntu-latest
     name: Run BATS test suite for entrypoint.sh
+
+    env:
+      # Latest BATS version
+      # This should manually be updated when a new version is released
+      # Tries to match the latest Docker tag for the BATS image at:
+      # https://hub.docker.com/r/bats/bats/tags
+      BATS_VERSION: '1.11.0'
+      # The latest alpine version with Python3.9
+      # For more information use the alpine package search:
+      # https://pkgs.alpinelinux.org/packages?name=python3&branch=v3.15
+      BASH_DOCKER_TAG: alpine3.15
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout bats-core/bats-core
+        uses: actions/checkout@v4
+        with:
+          repository: bats-core/bats-core
+          path: bats-core
+
+      - name: Build BATS Docker image
+        run: docker build -t materials-consortia/bats:${{ env.BATS_VERSION }} --build-arg bashver=${{ env.BASH_DOCKER_TAG }} ./bats-core
+
+      - name: Checkout the local repository
+        uses: actions/checkout@v4
+        with:
+          path: main
 
       - name: Build BATS environment
-        run: docker build -t optimade_bats ./tests
+        run: docker build -t optimade_bats ./main/tests
 
       - name: Run BATS tests
         run: ./run_tests.sh
+        working-directory: main
 
   validator_version:
     runs-on: ubuntu-latest
