--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -169,7 +169,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build BATS environment
-        run: docker build -t optimade_bats ./tests
+        run: |
+          docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+          docker build -t optimade_bats ./tests
 
       - name: Run BATS tests
         run: ./run_tests.sh
