Set load to true

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -183,6 +183,7 @@ jobs:
         with:
           context: ./tests
           push: false
+          load: true
           tags: optimade_bats
 
       - name: Run BATS tests
