--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   - id: check-executables-have-shebangs
   - id: check-shebang-scripts-are-executable
 
-- repo: https://github.com/ambv/black
+- repo: https://github.com/psf/black
   rev: 24.4.2
   hooks:
   - id: black
