--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.6.0
   hooks:
   - id: check-yaml
     name: Check YAML
@@ -16,19 +16,19 @@ repos:
   - id: check-executables-have-shebangs
   - id: check-shebang-scripts-are-executable
 
-- repo: https://github.com/ambv/black
-  rev: 23.9.1
+- repo: https://github.com/psf/black
+  rev: 24.4.2
   hooks:
   - id: black
 
 - repo: https://github.com/PyCQA/bandit
-  rev: '1.7.5'
+  rev: '1.7.8'
   hooks:
   - id: bandit
     args: [-r]
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.5.1
+  rev: v1.10.0
   hooks:
   - id: mypy
 
