Update dependabot with 'groups'
Remove everything to do with the permanent dependencies branch.
Add the usage of the invoke task 'check-dockerfile-python-version' as a
pre-commit hook, instead of using it in the (now removed)
ci_automerge_dependabot.yml workflow.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,23 +5,43 @@ updates:
   schedule:
     interval: daily
     time: "04:43"
-  target-branch: ci/dependabot-updates
+  target-branch: master
   labels:
   - docker_dependencies
+  groups:
+    docker:
+      applies-to: version-updates
+      dependency-type: production
+    docker-security:
+      applies-to: security-updates
+      dependency-type: production
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
     time: "04:38"
-  target-branch: ci/dependabot-updates
+  target-branch: master
   labels:
   - CI
-- package-ecosystem: docker
-  directory: "/tests"
+  groups:
+    gh-actions:
+      applies-to: version-updates
+      dependency-type: production
+    gh-actions-security:
+      applies-to: security-updates
+      dependency-type: production
+- package-ecosystem: pip
+  directory: "/"
   schedule:
     interval: daily
-    time: "04:33"
-  target-branch: ci/dependabot-updates
+    time: "04:53"
+  target-branch: master
   labels:
-  - docker_dependencies
-  - tests
+  - CI
+  groups:
+    python:
+      applies-to: version-updates
+      dependency-type: production
+    python-security:
+      applies-to: security-updates
+      dependency-type: production
