Optimize cd_release.yml workflow
Minor updates to naming and more.
Use the docker image for github-changelog-generator straight up.
Create outputs instead of environment variables on-the-fly whenever
possible.

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -14,7 +14,6 @@ jobs:
 
   pre-commit:
     runs-on: ubuntu-latest
-    name: Pre-commit
     steps:
       - uses: actions/checkout@v4
 
@@ -41,7 +40,7 @@ jobs:
 
   pylint-safety:
     runs-on: ubuntu-latest
-    name: PyLint & Safety
+    name: pylint & safety
     steps:
       - uses: actions/checkout@v4
 
