--- a/action.yml
+++ b/action.yml
@@ -55,7 +55,7 @@ inputs:
 
   path:
     description: >
-      Path to append to the domain to reach the OPTIMADE unversioned base URL - MUST start with `/`.
+      Path to append to the domain to reach the OPTIMADE unversioned base URL.
       The path MUST NOT include the versioned part of the base URL.
       Rather, it MUST point to the unversioned base URL of your OPTIMADE implementation.
     required: false
