--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -162,6 +162,11 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v4
 
+      - name: Install Python 3.10 (minimum supported OPT version)
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
       - name: Setup BATS and BATS libs
         id: setup-bats
         uses: bats-core/bats-action@3.0.0
