--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -184,6 +184,9 @@ jobs:
           sudo apt-get update && sudo apt-get install --no-install-recommends -fqqy iproute2
           set -o pipefail && ip route | awk '{print $3}' > /tmp/docker_host_ip
 
+          python -m pip install -U pip
+          pip install -U setuptools wheel virtualenv
+
       - name: Run BATS tests
         shell: bash
         env:
