--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -181,11 +181,13 @@ jobs:
       - name: Imitate the Action's Dockerfile
         shell: bash
         run: |
-          sudo apt-get update && sudo apt-get install --no-install-recommends -fqqy iproute2
+          echo "Installing iproute2 and getting the host IP address"
+          sudo apt-get -qq update && sudo apt-get install --no-install-recommends -fqqy iproute2
           set -o pipefail && ip route | awk '{print $3}' > /tmp/docker_host_ip
 
-          python -m pip install -U pip
-          pip install -U setuptools wheel virtualenv
+          echo "Installing Python dependencies"
+          python -m pip install -U -q pip
+          pip install -U -q setuptools wheel virtualenv
 
       - name: Run BATS tests
         shell: bash
